# uv-tox-test

./: .gitignore  DEVOPS-MIGRATION-GUIDE.md  Makefile  README.md  app.py  github-artifacts-example.md  pyproject.toml  test-pipeline.ps1  test-simple.ps1  tox.ini
.github/workflows/: ci-advanced.yml  ci.yml  uv.yml
tests/: __init__.py  test_app.py
